--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
     "build:css": "npx tailwindcss -i ./src/CashierView.css -o ./dist/styles.css --watch"
   },
   "dependencies": {
+    "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
