--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "build:css": "npx tailwindcss -i ./src/CashierView.css -o ./dist/styles.css --watch"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "i18next": "^23.16.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
