--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,10 +8,12 @@ cryptography==43.0.3
 Flask==3.0.3
 Flask-Cors==5.0.0
 Flask-SQLAlchemy==3.1.1
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+packaging==24.2
 psycopg2==2.9.10
 pycparser==2.22
 python-dotenv==1.0.1
