--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "build:css": "npx tailwindcss -i ./src/CashierView.css -o ./dist/styles.css --watch"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "chart.js": "^4.4.6",
     "dotenv": "^16.4.5",
     "i18next": "^23.16.5",
