--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "serve -s dist",
     "lint": "eslint .",
     "preview": "vite preview",
     "build:css": "npx tailwindcss -i ./src/CashierView.css -o ./dist/styles.css --watch"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "chart.js": "^4.4.6",
     "dotenv": "^16.4.5",
     "i18next": "^23.16.5",
@@ -20,7 +22,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "serve": "^14.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
