--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "start": "serve -s dist",
     "lint": "eslint .",
     "preview": "vite preview",
-    "build:css": "npx tailwindcss -i ./src/CashierView.css -o ./dist/styles.css --watch"
+    "build:css": "npx tailwindcss -i ./src/CashierView.css -o ./dist/styles.css --watch",
+    "frontend-docs": "npx jsdoc -c jsdoc.json -r ./src -d ../docs/frontend",
+    "backend-docs": "npx pdoc ../backend -o ../docs/backend",
+    "generate-docs": "npm run frontend-docs && npm run backend-docs"
   },
   "dependencies": {
     "axios": "^1.3.2",
